ab image firebase se delete ho rahi hain

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   
             <base href="/">
             <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
 </head>
       
 <body>
@@ -35,6 +36,7 @@
 
       <!-- admin LINKS start -->
       <script src="assets/plugins/jquery/jquery-3.1.0.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
       <script src="assets/plugins/bootstrap/popper.min.js"></script>
       <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
       <script src="assets/plugins/jquery-slimscroll/jquery.slimscroll.min.js"></script>
@@ -42,6 +44,7 @@
       <script src="assets/plugins/apexcharts/dist/apexcharts.min.js"></script>
       <script src="assets/js/concept.min.js"></script>
       <script src="assets/js/pages/dashboard.js"></script>
+      
 <!-- admin LINKS END -->
 
 
